bin_PROGRAMS = swarmget ntsgen

INCLUDES = $(PKG_CPPFLAGS)

swarmget_SOURCES = swarmget.c swarmget.h datastructures.h datastructures.c sha.c ntsfile.c ntsfile.h http.c http.h types.h bithelp.h conf.h conf.c md5.h md5.c
swarmget_LDADD = -lpthread

ntsgen_SOURCES = ntsgen.c ntsgen.h sha.c sha.h types.h bithelp.h

